# public/api.yaml
@@ -872,28 +872,84 @@ paths:
                 type: array
                 items: 
                   type: string
-  /products/search/:name:
+  /products/search-productes:
     get:
-      parameters:
-        - in: query
-          name: name
-          schema:
-            type: string
-          required: true
-          description: get subcategories.
-      summary: get subcategories.
-      description: Optional extended description in CommonMark or HTML.
+      summary: Search Productes
+      description: Retrieve a list of Productes based on query parameters.
       tags:
         - products
+      parameters:
+        - in: query
+          name: sortOrder
+          schema:
+            type: string
+            enum: [asc, desc]
+          description: The sort order of the products.
+        - in: query
+          name: rating
+          schema:
+            type: integer
+            format: int32
+          description: Minimum average rating of the products.
+        - in: query
+          name: max
+          schema:
+            type: number
+            format: float
+          description: Maximum price of the products.
+        - in: query
+          name: min
+          schema:
+            type: number
+            format: float
+          description: Minimum price of the products.
+        - in: query
+          name: category
+          schema:
+            type: integer
+            format: int32
+          description: Category ID to filter the products.
+        - in: query
+          name: page
+          schema:
+            type: integer
+            format: int32
+          description: Page number for pagination.
+        - in: query
+          name: limit
+          schema:
+            type: integer
+            format: int32
+          description: Number of products per page.
       responses:
-        '200':    # status code
-          description: A JSON array of user names
+        '200':
+          description: Productes successfully fetched.
           content:
             application/json:
-              schema: 
-                type: array
-                items: 
-                  type: string
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        _id:
+                          type: string
+                        name:
+                          type: string
+                        variants:
+                          type: array
+                          items:
+                            type: object
+                        reviews:
+                          type: array
+                          items:
+                            type: object
   /products/count-categories:
     get:
       summary: count of products for each category.
@@ -2141,3 +2197,25 @@ paths:
                       updatedAt:
                         type: string
                         format: date-time
+        '404':
+          description: Cart or product not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
